welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: identifier expected but integer literal found.
  faireLigne(); setPos(x:0, y:3); droite(); faireLigne()
                         ^PatternPicture:3: error: ')' expected but '}' found.
}
^